{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 88,
  "lineage": "2047dfdf-31c8-d19a-3ef9-38669bf5da51",
  "resources": [
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064b264326ba3c655",
            "domain": "vpc",
            "id": "eipalloc-064b264326ba3c655",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-226-135-155.compute-1.amazonaws.com",
            "public_ip": "34.226.135.155",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "VPC-modules-EIP-true"
            },
            "tags_all": {
              "Name": "VPC-modules-EIP-true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:941866453236:instance/i-02451da05376485c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02451da05376485c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07209117f1ded5a8b",
            "private_dns": "ip-10-0-2-209.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.209",
            "public_dns": "ec2-54-80-245-18.compute-1.amazonaws.com",
            "public_ip": "54.80.245.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f2aa671eaa39ee0d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7271a991ad264e8",
            "tags": {
              "Name": "BB-Jenkins"
            },
            "tags_all": {
              "Name": "BB-Jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-015323d693de44b53"
            ]
          },
          "dependencies": [
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "artifactory",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:941866453236:instance/i-0f2fb87914f0a4534",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f2fb87914f0a4534",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "terra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07cac2c715599395e",
            "private_dns": "ip-10-0-2-163.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.163",
            "public_dns": "ec2-174-129-144-47.compute-1.amazonaws.com",
            "public_ip": "174.129.144.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0100e87768a3d007a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7271a991ad264e8",
            "tags": {
              "Name": "BB-artifactory"
            },
            "tags_all": {
              "Name": "BB-artifactory"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-015323d693de44b53"
            ]
          },
          "dependencies": [
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonbarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:941866453236:instance/i-043d05b609e1b2e54",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-043d05b609e1b2e54",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "terra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-003d8c175a46ad822",
            "private_dns": "ip-10-0-2-128.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.128",
            "public_dns": "ec2-54-81-157-161.compute-1.amazonaws.com",
            "public_ip": "54.81.157.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0203ec0fb8afb5c80",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7271a991ad264e8",
            "tags": {
              "Name": "BB-sonarqube"
            },
            "tags_all": {
              "Name": "BB-sonarqube"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-015323d693de44b53"
            ]
          },
          "dependencies": [
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941866453236:internet-gateway/igw-0d1f64b81486060d6",
            "id": "igw-0d1f64b81486060d6",
            "owner_id": "941866453236",
            "tags": {
              "Name": "VPC-modules-vpc-0583ceb67388f4bb1-IG!"
            },
            "tags_all": {
              "Name": "VPC-modules-vpc-0583ceb67388f4bb1-IG!"
            },
            "vpc_id": "vpc-0583ceb67388f4bb1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:941866453236:loadbalancer/app/ALB-MODULE/1d4d32590db88691",
            "arn_suffix": "app/ALB-MODULE/1d4d32590db88691",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-MODULE-1892367203.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:941866453236:loadbalancer/app/ALB-MODULE/1d4d32590db88691",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-MODULE",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02d8a690843ea90ed"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a7271a991ad264e8"
              },
              {
                "subnet_id": "subnet-0b9593cf688328509"
              }
            ],
            "subnets": [
              "subnet-0a7271a991ad264e8",
              "subnet-0b9593cf688328509"
            ],
            "tags": {
              "Name": "ALB-MODULE"
            },
            "tags_all": {
              "Name": "ALB-MODULE"
            },
            "vpc_id": "vpc-0583ceb67388f4bb1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ialb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:941866453236:loadbalancer/app/ialb/95e1777cbb41cf02",
            "arn_suffix": "app/ialb/95e1777cbb41cf02",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ialb-1777694832.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:941866453236:loadbalancer/app/ialb/95e1777cbb41cf02",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ialb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f38f60f28a509924"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06830b4edeb534fbf"
              },
              {
                "subnet_id": "subnet-0bc43ae306f5a79b7"
              }
            ],
            "subnets": [
              "subnet-06830b4edeb534fbf",
              "subnet-0bc43ae306f5a79b7"
            ],
            "tags": {
              "Name": "ACS-int-alb"
            },
            "tags_all": {
              "Name": "ACS-int-alb"
            },
            "vpc_id": "vpc-0583ceb67388f4bb1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:941866453236:listener/app/ALB-MODULE/1d4d32590db88691/b91d412ef85062b5",
            "certificate_arn": "arn:aws:acm:us-east-1:941866453236:certificate/704c3c50-38fd-4f12-826d-9af0ca26dccd",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:941866453236:targetgroup/nginx-tgt/803bd3851f1f44a5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:941866453236:listener/app/ALB-MODULE/1d4d32590db88691/b91d412ef85062b5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:941866453236:loadbalancer/app/ALB-MODULE/1d4d32590db88691",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "dependencies": [
            "module.ALB.aws_acm_certificate.bb",
            "module.ALB.aws_acm_certificate_validation.bb",
            "module.ALB.aws_lb.ext-alb",
            "module.ALB.aws_lb_target_group.nginx-tgt",
            "module.ALB.aws_route53_record.bb",
            "module.ALB.data.aws_route53_zone.bb",
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:941866453236:listener/app/ialb/95e1777cbb41cf02/b4ecc608209e03cd",
            "certificate_arn": "arn:aws:acm:us-east-1:941866453236:certificate/704c3c50-38fd-4f12-826d-9af0ca26dccd",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:941866453236:targetgroup/wordpress-tgt/283abf2f39134685",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:941866453236:listener/app/ialb/95e1777cbb41cf02/b4ecc608209e03cd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:941866453236:loadbalancer/app/ialb/95e1777cbb41cf02",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "dependencies": [
            "module.ALB.aws_acm_certificate.bb",
            "module.ALB.aws_acm_certificate_validation.bb",
            "module.ALB.aws_lb.ialb",
            "module.ALB.aws_lb_target_group.wordpress-tgt",
            "module.ALB.aws_route53_record.bb",
            "module.ALB.data.aws_route53_zone.bb",
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:941866453236:targetgroup/tooling-tgt/64af8b81c82bb0f3",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:941866453236:listener-rule/app/ialb/95e1777cbb41cf02/b4ecc608209e03cd/24b04e4cdc48234f",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.bbwest.online"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:941866453236:listener-rule/app/ialb/95e1777cbb41cf02/b4ecc608209e03cd/24b04e4cdc48234f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:941866453236:listener/app/ialb/95e1777cbb41cf02/b4ecc608209e03cd",
            "priority": 99,
            "tags": null,
            "tags_all": {}
          },
          "dependencies": [
            "module.ALB.aws_acm_certificate.bb",
            "module.ALB.aws_acm_certificate_validation.bb",
            "module.ALB.aws_lb.ialb",
            "module.ALB.aws_lb_listener.web-listener",
            "module.ALB.aws_lb_target_group.tooling-tgt",
            "module.ALB.aws_lb_target_group.wordpress-tgt",
            "module.ALB.aws_route53_record.bb",
            "module.ALB.data.aws_route53_zone.bb",
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:941866453236:targetgroup/nginx-tgt/803bd3851f1f44a5",
            "arn_suffix": "targetgroup/nginx-tgt/803bd3851f1f44a5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:941866453236:targetgroup/nginx-tgt/803bd3851f1f44a5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0583ceb67388f4bb1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:941866453236:targetgroup/tooling-tgt/64af8b81c82bb0f3",
            "arn_suffix": "targetgroup/tooling-tgt/64af8b81c82bb0f3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:941866453236:targetgroup/tooling-tgt/64af8b81c82bb0f3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tooling-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0583ceb67388f4bb1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:941866453236:targetgroup/wordpress-tgt/283abf2f39134685",
            "arn_suffix": "targetgroup/wordpress-tgt/283abf2f39134685",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:941866453236:targetgroup/wordpress-tgt/283abf2f39134685",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0583ceb67388f4bb1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064b264326ba3c655",
            "association_id": "eipassoc-0e3c5fe85b8cda2cb",
            "connectivity_type": "public",
            "id": "nat-0ae14645404d521f4",
            "network_interface_id": "eni-030f98fa74422482b",
            "private_ip": "10.0.2.147",
            "public_ip": "34.226.135.155",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a7271a991ad264e8",
            "tags": {
              "Name": "VPC-modules-Nat-true"
            },
            "tags_all": {
              "Name": "VPC-modules-Nat-true"
            }
          },
          "dependencies": [
            "module.VPC.aws_eip.nat_eip",
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "private-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a16dc00cfcf626321080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ae14645404d521f4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a16dc00cfcf62632",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.VPC.aws_eip.nat_eip",
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_nat_gateway.nat",
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d1f64b81486060d6",
            "id": "r-rtb-0e52f5533e17c326c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e52f5533e17c326c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.VPC.aws_internet_gateway.ig",
            "module.VPC.aws_route_table.public-rtb",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941866453236:route-table/rtb-0a16dc00cfcf62632",
            "id": "rtb-0a16dc00cfcf62632",
            "owner_id": "941866453236",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC-modules-Private-Route-Table-true"
            },
            "tags_all": {
              "Name": "VPC-modules-Private-Route-Table-true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0583ceb67388f4bb1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941866453236:route-table/rtb-0e52f5533e17c326c",
            "id": "rtb-0e52f5533e17c326c",
            "owner_id": "941866453236",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "VPC-modules-Public-Route-Table-true"
            },
            "tags_all": {
              "Name": "VPC-modules-Public-Route-Table-true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0583ceb67388f4bb1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0614c44d8852a14b5",
            "route_table_id": "rtb-0a16dc00cfcf62632",
            "subnet_id": "subnet-0bc43ae306f5a79b7"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e99386e1c7095a2",
            "route_table_id": "rtb-0a16dc00cfcf62632",
            "subnet_id": "subnet-06830b4edeb534fbf"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dd029ea62c5815b",
            "route_table_id": "rtb-0a16dc00cfcf62632",
            "subnet_id": "subnet-050811d19725abffb"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c61f73d2583ae4e",
            "route_table_id": "rtb-0a16dc00cfcf62632",
            "subnet_id": "subnet-006aa92326cf17805"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private-rtb",
            "module.VPC.aws_subnet.private",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05614df92a714b069",
            "route_table_id": "rtb-0e52f5533e17c326c",
            "subnet_id": "subnet-0a7271a991ad264e8"
          },
          "dependencies": [
            "module.VPC.aws_route_table.public-rtb",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0845b6075a6c47781",
            "route_table_id": "rtb-0e52f5533e17c326c",
            "subnet_id": "subnet-0b9593cf688328509"
          },
          "dependencies": [
            "module.VPC.aws_route_table.public-rtb",
            "module.VPC.aws_subnet.public",
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "BB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bastion-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941866453236:security-group/sg-0224a62c6d34ee305",
            "description": "for bastion instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0224a62c6d34ee305",
            "ingress": [],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "941866453236",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0583ceb67388f4bb1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "compute-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941866453236:security-group/sg-015323d693de44b53",
            "description": "compute security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015323d693de44b53",
            "ingress": [],
            "name": "compute-sg",
            "name_prefix": "",
            "owner_id": "941866453236",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "compute-sg"
            },
            "tags_all": {
              "Name": "compute-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0583ceb67388f4bb1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": "datalayer-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941866453236:security-group/sg-0f48fd882ff32756f",
            "description": "data layer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f48fd882ff32756f",
            "ingress": [],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "941866453236",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "datalayer-sg"
            },
            "tags_all": {
              "Name": "datalayer-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0583ceb67388f4bb1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": "ext-alb-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941866453236:security-group/sg-02d8a690843ea90ed",
            "description": "for external loadbalncer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d8a690843ea90ed",
            "ingress": [],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "941866453236",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ext-alb-sg"
            },
            "tags_all": {
              "Name": "ext-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0583ceb67388f4bb1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": "int-alb-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941866453236:security-group/sg-0f38f60f28a509924",
            "description": "IALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f38f60f28a509924",
            "ingress": [],
            "name": "int-alb-sg",
            "name_prefix": "",
            "owner_id": "941866453236",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "int-alb-sg"
            },
            "tags_all": {
              "Name": "int-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0583ceb67388f4bb1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ]
        },
        {
          "index_key": "nginx-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941866453236:security-group/sg-01ebbdb8fda0775f6",
            "description": "nginx instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ebbdb8fda0775f6",
            "ingress": [],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "941866453236",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-sg"
            },
            "tags_all": {
              "Name": "nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0583ceb67388f4bb1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "webserver-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941866453236:security-group/sg-07e0590a30f6e8bbf",
            "description": "webservers security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e0590a30f6e8bbf",
            "ingress": [],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "941866453236",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-sg"
            },
            "tags_all": {
              "Name": "webserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0583ceb67388f4bb1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-alb-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3197856436",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02d8a690843ea90ed",
            "security_group_rule_id": "sgr-003b528d410ccec3f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-alb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2347581331",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02d8a690843ea90ed",
            "security_group_rule_id": "sgr-0af25e7495b4f845a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1598277806",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01ebbdb8fda0775f6",
            "security_group_rule_id": "sgr-035f25ffe3fcab6c2",
            "self": false,
            "source_security_group_id": "sg-0224a62c6d34ee305",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh-compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-33845495",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-015323d693de44b53",
            "security_group_rule_id": "sgr-0d9365e1b010eb4e3",
            "self": false,
            "source_security_group_id": "sg-0224a62c6d34ee305",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-2606490456",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f38f60f28a509924",
            "security_group_rule_id": "sgr-051723fcf64da0ead",
            "self": false,
            "source_security_group_id": "sg-01ebbdb8fda0775f6",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3959887285",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f48fd882ff32756f",
            "security_group_rule_id": "sgr-092200a42d6a2c60b",
            "self": false,
            "source_security_group_id": "sg-0224a62c6d34ee305",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1770685890",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f48fd882ff32756f",
            "security_group_rule_id": "sgr-0a84c4c2b05d10422",
            "self": false,
            "source_security_group_id": "sg-07e0590a30f6e8bbf",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-4199290184",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f48fd882ff32756f",
            "security_group_rule_id": "sgr-01e58d7e9526cbaa4",
            "self": false,
            "source_security_group_id": "sg-07e0590a30f6e8bbf",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "dependencies": [
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-3348697985",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01ebbdb8fda0775f6",
            "security_group_rule_id": "sgr-0f94a7ebb7a2857cd",
            "self": false,
            "source_security_group_id": "sg-02d8a690843ea90ed",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-port-artifcatory",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8081,
            "id": "sgrule-40928970",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-015323d693de44b53",
            "security_group_rule_id": "sgr-0ec8a8100ea578c46",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8081,
            "type": "ingress"
          },
          "dependencies": [
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-port-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-3763485385",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-015323d693de44b53",
            "security_group_rule_id": "sgr-074dc5043d93a1fe9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-port-sonarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 9000,
            "id": "sgrule-925541800",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02d8a690843ea90ed",
            "security_group_rule_id": "sgr-020f407c827de35ea",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9000,
            "type": "ingress"
          },
          "dependencies": [
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ssh-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1086686692",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0224a62c6d34ee305",
            "security_group_rule_id": "sgr-0079172e28b093a8a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-3681098269",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07e0590a30f6e8bbf",
            "security_group_rule_id": "sgr-0f8e059d48eb24724",
            "self": false,
            "source_security_group_id": "sg-0f38f60f28a509924",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1795799384",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07e0590a30f6e8bbf",
            "security_group_rule_id": "sgr-0199510aa2de181c3",
            "self": false,
            "source_security_group_id": "sg-0224a62c6d34ee305",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.Security.aws_security_group.BB",
            "module.VPC.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941866453236:subnet/subnet-0bc43ae306f5a79b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc43ae306f5a79b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941866453236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-modules-PrivateSubnet-0"
            },
            "tags_all": {
              "Name": "VPC-modules-PrivateSubnet-0"
            },
            "vpc_id": "vpc-0583ceb67388f4bb1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941866453236:subnet/subnet-06830b4edeb534fbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06830b4edeb534fbf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941866453236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-modules-PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "VPC-modules-PrivateSubnet-1"
            },
            "vpc_id": "vpc-0583ceb67388f4bb1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941866453236:subnet/subnet-050811d19725abffb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050811d19725abffb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941866453236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-modules-PrivateSubnet-2"
            },
            "tags_all": {
              "Name": "VPC-modules-PrivateSubnet-2"
            },
            "vpc_id": "vpc-0583ceb67388f4bb1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941866453236:subnet/subnet-006aa92326cf17805",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006aa92326cf17805",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941866453236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-modules-PrivateSubnet-3"
            },
            "tags_all": {
              "Name": "VPC-modules-PrivateSubnet-3"
            },
            "vpc_id": "vpc-0583ceb67388f4bb1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941866453236:subnet/subnet-0a7271a991ad264e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7271a991ad264e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941866453236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-modules-PublicSubnet-0"
            },
            "tags_all": {
              "Name": "VPC-modules-PublicSubnet-0"
            },
            "vpc_id": "vpc-0583ceb67388f4bb1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941866453236:subnet/subnet-0b9593cf688328509",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9593cf688328509",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "941866453236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC-modules-PublicSubnet-1"
            },
            "tags_all": {
              "Name": "VPC-modules-PublicSubnet-1"
            },
            "vpc_id": "vpc-0583ceb67388f4bb1"
          },
          "dependencies": [
            "module.VPC.aws_vpc.main",
            "module.VPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:941866453236:vpc/vpc-0583ceb67388f4bb1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bf066d9a0fff346a",
            "default_route_table_id": "rtb-0fd91221910b286ee",
            "default_security_group_id": "sg-093dd7378d3c5630b",
            "dhcp_options_id": "dopt-01566985c80301c05",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0583ceb67388f4bb1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fd91221910b286ee",
            "owner_id": "941866453236",
            "tags": {
              "Name": "VPC-modules-VPC"
            },
            "tags_all": {
              "Name": "VPC-modules-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}